--- a/README
+++ b/README
@@ -6,3 +6,7 @@ http://retropc.net/mz-memories/mz700/
 - "Fullscreen" is disabled. Because I can't found 'ddraw.lib" on VS2010.
 
 code by Marukun, Youkan
+
+--
+Please overwrite in a solution file of existence and a project file in sln directory, according to the version of Visual Studio you're using.
+Default is for VS2010.
