--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-mz700win version 0.55a
+mz700win version 0.55b
 Specifically, please visit there.
 http://retropc.net/mz-memories/mz700/
 
@@ -10,3 +10,7 @@ code by Marukun, Youkan
 --
 Please overwrite in a solution file of existence and a project file in sln directory, according to the version of Visual Studio you're using.
 Default is for VS2010.
+
+--
+Version 0.55b (2016/08/28)
+Screen size setting is expanded even x4 for a person with 4K monitor.
