--- a/README
+++ b/README
@@ -12,5 +12,14 @@ Please overwrite in a solution file of existence and a project file in sln direc
 Default is for VS2010.
 
 --
+branch ver_2016_09_03 (2016/09/08)
+Allocation of game pad and keyboard was implemented by fixing.
+ARROW Key = CURSOR key
+A button = SPACE key
+B button = SHIFT key
+X button = Z key
+Y button = X key
+
+--
 Version 0.55b (2016/08/28)
 Screen size setting is expanded even x4 for a person with 4K monitor.
